[gd_scene load_steps=17 format=3 uid="uid://oj7phaej3nyt"]

[ext_resource type="Script" path="res://Scripts/Game_over.gd" id="1_748x8"]
[ext_resource type="Texture2D" uid="uid://dys0mbiq5vflx" path="res://UI/game_over_screen.jpg" id="2_cl0bf"]
[ext_resource type="FontFile" uid="uid://we3g4eb260so" path="res://UI/Font/kenvector_future.ttf" id="3_aarhd"]
[ext_resource type="AudioStream" uid="uid://ba01f724b4nc6" path="res://Sounds/bong.mp3" id="4_t41r8"]
[ext_resource type="Texture2D" uid="uid://1f83gl6kc0u0" path="res://UI/Large Buttons/Colored Large Buttons/New Game  col_Button.png" id="5_enq58"]
[ext_resource type="Texture2D" uid="uid://q5usnb5bk66t" path="res://UI/Large Buttons/Large Buttons/New game Button.png" id="6_08roj"]
[ext_resource type="Texture2D" uid="uid://dq1u448ww8w8g" path="res://UI/Large Buttons/Colored Large Buttons/Exit  col_Button.png" id="7_sgxvo"]
[ext_resource type="Texture2D" uid="uid://b3a5j4w16lpuf" path="res://UI/Large Buttons/Large Buttons/Exit Button.png" id="8_2gxma"]
[ext_resource type="AudioStream" uid="uid://bay3p4d5ujdfm" path="res://Sounds/Audio/bong_001.ogg" id="9_3mo41"]
[ext_resource type="AudioStream" uid="uid://bhawaf4x3xd6h" path="res://Sounds/Audio/confirmation_001.ogg" id="10_bk2t3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_44224"]
texture = ExtResource("5_enq58")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8bffv"]
texture = ExtResource("6_08roj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_835l3"]
texture = ExtResource("6_08roj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xdr7n"]
texture = ExtResource("7_sgxvo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j3nko"]
texture = ExtResource("8_2gxma")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rcjhn"]
texture = ExtResource("8_2gxma")

[node name="Game Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_748x8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_cl0bf")

[node name="your_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.321354
anchor_top = 0.449074
anchor_right = 0.366667
anchor_bottom = 0.512963
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_aarhd")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="best_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.628646
anchor_top = 0.446296
anchor_right = 0.673959
anchor_bottom = 0.510185
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_aarhd")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_t41r8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = 263.0
offset_right = 26.0
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(14.4729, 14.3786)
pivot_offset = Vector2(25.0145, 6.29448)
alignment = 1

[node name="Restart" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_44224")
theme_override_styles/hover = SubResource("StyleBoxTexture_8bffv")
theme_override_styles/focus = SubResource("StyleBoxTexture_835l3")

[node name="Exit" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_xdr7n")
theme_override_styles/hover = SubResource("StyleBoxTexture_j3nko")
theme_override_styles/focus = SubResource("StyleBoxTexture_rcjhn")

[node name="Hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_3mo41")
volume_db = 7.924

[node name="Pressed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_bk2t3")

[connection signal="focus_entered" from="HBoxContainer/Restart" to="." method="_on_restart_focus_entered"]
[connection signal="mouse_entered" from="HBoxContainer/Restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="focus_entered" from="HBoxContainer/Exit" to="." method="_on_exit_focus_entered"]
[connection signal="mouse_entered" from="HBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_exit_pressed"]
